# minicd

./: ci.sh  pyproject.toml  readme.md
src/minicd/: cli.py
src/mycd/: cli.py
tests/: test_cli.py
